[package]
name = "hooch"
version = "0.1.1"
authors = ["Bartek"]
description = "A small async runtime that's been bootlegged for my projects."
license = "Apache-2.0"
repository = "https://github.com/bwintertkb/hooch"
readme = "README.md"
keywords = ["async", "futures", "io", "non-blocking"]
categories = ["async", "futures", "io", "non-blocking"]
edition = "2021"

[dependencies]
mio = { version = "1.0.2", features = ["net", "os-ext", "os-poll"] }
