[workspace]
members = [
	"hooch-macro",
	"."
]

[package]
name = "hooch"
version = "0.1.33"
authors = ["Bartek"]
description = "A small async runtime that's been bootlegged for my projects."
license = "Apache-2.0"
repository = "https://github.com/bwintertkb/hooch"
readme = "README.md"
keywords = ["async", "futures", "io", "non-blocking"]
categories = ["asynchronous"]
edition = "2021"

[dependencies]
mio = { version = "1.0.2", features = ["net", "os-ext", "os-poll"] }
nix = { version = "0.29.0", features = ["time"] }
hooch-macro = "0.1.0"
dashmap = "6.1.0"
