[package]
name = "hooch-macro"
version = "0.1.1"
authors = ["Bartek"]
description = "Procedural macros for the hooch async runtime."
license = "Apache-2.0"
repository = "https://github.com/bwintertkb/hooch"
readme = "README.md"
keywords = ["async", "macro", "procedural", "runtime"]
categories = ["asynchronous", "development-tools"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }
